# gas-benchmark

./: .env.example  .gitignore  README.md  hardhat.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json
contracts/: CheckAndWriteBatchIndexesAndAddresses.sol  Events.sol  UintAndBool.sol  Which.sol  WriteBatchIndexes.sol  WriteBatchIndexesAndAddresses.sol
contracts/base/: ERC721OZ16.sol  ERC721OZ16Enumerable.sol
contracts/tokens/: ERC721.sol  ERC721A.sol  ERC721B.sol  ERC721BEnumerable.sol  ERC721Enumerable.sol  ERC721Naomsa.sol  ERC721OZ.sol  ERC721OZ16.sol  ERC721OZ16Enumerable.sol  ERC721OZEnumerable.sol
data/: checkAndWriteBatchIndexesAndAddresses.json  events.json  mintBatch.json  writeBatchIndexes.json  writeBatchIndexesAndAddresses.json
deploy/: CheckAndWriteBatchIndexesAndAddresses.ts  ERC721.ts  ERC721A.ts  ERC721B.ts  ERC721BEnumerable.ts  ERC721Enumerable.ts  ERC721Naomsa.ts  ERC721OZ.ts  UintAndBool.ts  Which.ts  events.ts  writeBatchIndexes.ts  writeBatchIndexesAndAddresses.ts
deployments/localhost/: CheckAndWriteBatchIndexesAndAddresses.json  ERC721.json  ERC721A.json  ERC721B.json  ERC721BEnumerable.json  ERC721Enumerable.json  ERC721Naomsa.json  ERC721OZ.json  ERC721OZ16.json  ERC721OZ16Enumerable.json  ERC721OZEnumerable.json  Events.json  WriteBatchIndexes.json  (+1 more)
gas_benchmark/: gas_analysis.py
notebooks/: gas_analysis.py  the_4_eth_mistake.md
tasks/: checkAndWriteBatchIndexesAndAddresses.ts  events.ts  index.ts  mintBatch.ts  writeBatchIndexes.ts  writeBatchIndexesAndAddresses.ts
utils/: constants.ts
(+5 files in other folders)
